--- a/iCareJava/src/iHealth/ui/Connexion.form
+++ b/iCareJava/src/iHealth/ui/Connexion.form
@@ -204,7 +204,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="33" green="33" red="0" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Veuillez indiquer un identifiant et un mot de passe"/>
+            <Property name="text" type="java.lang.String" value="Veuillez identiquer un identifiant et un mot de passe"/>
             <Property name="enabled" type="boolean" value="false"/>
           </Properties>
         </Component>
