--- a/iCareJava/src/iHealth/ui/Visualisation_DM.form
+++ b/iCareJava/src/iHealth/ui/Visualisation_DM.form
@@ -246,7 +246,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Helvetica Neue" size="24" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="M&#xe9;dicin :"/>
+                <Property name="text" type="java.lang.String" value="M&#xe9;decin :"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel13">
